Добавил подсветку фона

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
 
@@ -11,83 +12,81 @@
         android:id="@+id/time_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:fontFamily="sans-serif"
         android:hint="00:00:00.0"
         android:textSize="60sp"
-        android:fontFamily="sans-serif"
         android:textStyle="bold"
-        android:layout_marginTop="100dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/time_view"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/time_view">
 
         <Button
             android:id="@+id/start"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:backgroundTint="#7EFF6F"
-            app:cornerRadius="20dp"
-            android:textColor="#434343"
-            android:textSize="20sp"
             android:fontFamily="sans-serif"
-            android:textStyle="bold"
             android:onClick="onClickStartStop"
             android:text="start"
+            android:textColor="#434343"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:visibility="visible"
-            />
+            app:cornerRadius="20dp" />
 
         <Button
             android:id="@+id/stop"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:backgroundTint="#FAFF5E"
-            app:cornerRadius="20dp"
-            android:textColor="#434343"
-            android:textSize="20sp"
             android:fontFamily="sans-serif"
-            android:textStyle="bold"
             android:onClick="onClickStartStop"
             android:text="pause"
-            android:visibility="gone" />
+            android:textColor="#434343"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:cornerRadius="20dp" />
 
         <Button
             android:id="@+id/reset_unavailable"
             android:layout_width="200dp"
             android:layout_height="100dp"
+            android:layout_marginTop="30dp"
             android:backgroundTint="#FFB9B9"
-            app:cornerRadius="20dp"
-            android:textColor="#8C8C8C"
-            android:textSize="20sp"
             android:fontFamily="sans-serif"
-            android:textStyle="bold"
             android:onClick="onClickReset"
             android:text="reset"
-            android:layout_marginTop="30dp"
-            android:visibility="visible"/>
+            android:textColor="#8C8C8C"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:cornerRadius="20dp" />
 
         <Button
             android:id="@+id/reset_available"
             android:layout_width="200dp"
             android:layout_height="100dp"
+            android:layout_marginTop="30dp"
             android:backgroundTint="#FD6565"
-            app:cornerRadius="20dp"
-            android:textColor="#434343"
-            android:textSize="20sp"
             android:fontFamily="sans-serif"
-            android:textStyle="bold"
             android:onClick="onClickReset"
             android:text="reset"
-            android:layout_marginTop="30dp"
-            android:visibility="gone"/>
+            android:textColor="#434343"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:cornerRadius="20dp" />
 
     </LinearLayout>
 
